--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contakts</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
-        <address>
-          <a href="mailto:info@webstudio.com">info@webstudio.com</a>
-          <a href="tel:+11001111111">+1 (000) 111-11-11</a>
-        </address>
       </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="”mailto:info@devstudio.com”">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solution for your Business</h1>
-        <button type="button">Order service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <ul>
@@ -61,66 +67,58 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <figure>
+            <div>
               <img
-                src="images/img-3.jpg"
+                src="./images/img-3.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
-              <figcaption>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </div>
           </li>
           <li>
-            <figure>
+            <div>
               <img
-                src="images/img-2.jpg"
+                src="./images/img-2.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
               />
-              <figcaption>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </div>
           </li>
           <li>
-            <figure>
+            <div>
               <img
-                src="images/img-1.jpg"
+                src="./images/img-1.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
               />
-              <figcaption>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
+            </div>
           </li>
           <li>
-            <figure>
+            <div>
               <img
-                src="images/img.jpg"
+                src="./images/img.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
               />
-              <figcaption>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
