--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li>
-            <a href="”mailto:info@devstudio.com”">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -32,6 +32,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2 hidden>skills</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,52 +68,44 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <div>
-              <img
-                src="./images/img-3.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </div>
+            <img
+              src="./images/img-3.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <div>
-              <img
-                src="./images/img-2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </div>
+            <img
+              src="./images/img-2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <div>
-              <img
-                src="./images/img-1.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </div>
+            <img
+              src="./images/img-1.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <div>
-              <img
-                src="./images/img.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </div>
+            <img
+              src="./images/img.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
